Написал 26 тестов, Настроил docker compose, написал файл README, немного поменял сервисы.